--- a/layout/tags.ejs
+++ b/layout/tags.ejs
@@ -2,9 +2,7 @@
 layout: layout
 ---
 <style>
-    .intro-header .site-heading{
-        margin:50px;
-    }
+    <%- include _css/tags.css %>
 </style>
 
 <!-- Page Header -->
@@ -55,8 +53,6 @@ layout: layout
                 <% }) %>
             </div>
             <% }) %>
-
-
         </div>
     </div>
 </div>
