--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -14,9 +14,9 @@
                         </a>
                     </li>
                 <% } %>
-                <% if (config.twitter_username) { %>
+                <% if (theme.twitter_username) { %>
                     <li>
-                        <a target="_blank" href="https://twitter.com/<%= config.twitter_username %>">
+                        <a target="_blank" href="https://twitter.com/<%= theme.twitter_username %>">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -24,9 +24,9 @@
                         </a>
                     </li>
                 <% } %>
-                <% if (config.zhihu_username) { %>
+                <% if (theme.zhihu_username) { %>
                     <li>
-                        <a target="_blank" href="https://www.zhihu.com/people/<%= config.zhihu_username %>">
+                        <a target="_blank" href="https://www.zhihu.com/people/<%= theme.zhihu_username %>">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa  fa-stack-1x fa-inverse">知</i>
@@ -35,9 +35,9 @@
                     </li>
                 <% } %>
 
-                <% if (config.weibo_username) { %>
+                <% if (theme.weibo_username) { %>
                     <li>
-                        <a target="_blank" href="http://weibo.com/<%= config.weibo_username %>">
+                        <a target="_blank" href="http://weibo.com/<%= theme.weibo_username %>">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
@@ -46,9 +46,9 @@
                     </li>
                 <% } %>
 
-                <% if (config.facebook_username) { %>
+                <% if (theme.facebook_username) { %>
                     <li>
-                        <a target="_blank" href="https://www.facebook.com/<%= config.facebook_username %>">
+                        <a target="_blank" href="https://www.facebook.com/<%= theme.facebook_username %>">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -57,9 +57,9 @@
                     </li>
                 <% } %>
 
-                <% if (config.github_username) { %>
+                <% if (theme.github_username) { %>
                     <li>
-                        <a target="_blank"  href="https://github.com/<%= config.github_username %>">
+                        <a target="_blank"  href="https://github.com/<%= theme.github_username %>">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -68,9 +68,9 @@
                     </li>
                 <% } %>
 
-                <% if (config.linkedin_username) { %>
+                <% if (theme.linkedin_username) { %>
                     <li>
-                        <a target="_blank"  href="https://www.linkedin.com/in/<%= config.linkedin_username %>">
+                        <a target="_blank"  href="https://www.linkedin.com/in/<%= theme.linkedin_username %>">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -147,11 +147,11 @@
 
 <!-- Google Analytics -->
 
-<% if (config.ga_track_id) { %>
+<% if (theme.ga_track_id) { %>
 <script>
     // dynamic User by Hux
-    var _gaId = '<%= config.ga_track_id %>';
-    var _gaDomain = '<%= config.ga_domain %>';
+    var _gaId = '<%= theme.ga_track_id %>';
+    var _gaDomain = '<%= theme.ga_domain %>';
     // Originial
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -164,9 +164,9 @@
 
 
 <!-- Baidu Tongji -->
-<% if (config.ba_track_id) { %>
+<% if (theme.ba_track_id) { %>
 <script>
-    var _baId = '<%= config.ba_track_id %>';
+    var _baId = '<%= theme.ba_track_id %>';
     // Originial
     var _hmt = _hmt || [];
     (function() {
