--- a/layout/_partial/pagination.ejs
+++ b/layout/_partial/pagination.ejs
@@ -1,8 +1,12 @@
 <ul class="pager">
     <% if (page.prev){ %>
-        <li class="previous"><a href="<%- config.root %><%- page.prev_link %>">&larr;  <%- __('next')%></a></li>
+        <li class="previous">
+            <a href="<%- config.root %><%- page.prev_link %>" data-toggle="tooltip" data-placement="top" title="<%- page.prev.title %>">&larr;  <%- __('prev')%></a>
+        </li>
     <% } %>
     <% if (page.next){ %>
-        <li class="next"><a href="<%- config.root %><%- page.next_link %>"><%- __('prev')%>  &rarr;</a></li>
+        <li class="next">
+            <a href="<%- config.root %><%- page.next_link %>" data-toggle="tooltip" data-placement="top" title="<%- page.next.title %>"><%- __('next')%>  &rarr;</a>
+        </li>
     <% } %>
 </ul>
