--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -7,10 +7,10 @@ layout: page
 <% page.posts.each(function(post){ %>
 
 <div class="post-preview <%- post.layout === 'poetry'? 'post-preview-poetry':''%>"
-        style="background-image: url('<%- config["cdn-url"]%><%- post["header-img"] || config["post-default-img"] %><%- config["cdn-url"]?config["clip-home-post-bg"]:"" %>')">
+        style="background-image: url('<%- theme["cdn-url"]%><%- post["header-img"] || theme["post-default-img"] %><%- theme["cdn-url"]?theme["clip-home-post-bg"]:"" %>')">
         <a href="<%- config.root %><%- post.path %>">
         <h2 class="post-title">
-            <%- post.title || "未命名" %>
+            <%- post.title || __('untitiled') %>
         </h2>
         <p class="post-meta">
             <%= post.date.format(config.date_format) %>
@@ -33,17 +33,4 @@ layout: page
 
 
 <!-- 翻页 pager -->
-
-<ul class="pager">
-    <% if (page.prev){ %>
-        <li class="previous">
-            <a href="<%- config.root %><%- page.prev_link %>">&larr; Newer Posts</a>
-        </li>
-    <% } %>
-    <% if (page.next){ %>
-        <li class="next">
-            <a href="<%- config.root %><%- page.next_link %>">Older Posts &rarr;</a>
-        </li>
-    <% } %>
-</ul>
-
+<%- partial('_partial/pagination')%>
