--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -4,12 +4,7 @@
 <!-- Head tag -->
 <%- partial('_partial/head') %>
 <style>
-    .intro-header{
-        background-image:url(
-        '<%- config["cdn-url"]%><%= page["header-img"] ||config["header-img"] %><%-
-        config['cdn-url']? config['clip-content']:""%>'
-        )
-    }
+    <%- include _css/layout.css %>
 </style>
 <!-- hack iOS CSS :active style -->
 <body ontouchstart="">
@@ -19,7 +14,7 @@
     <!-- Footer -->
     <%- partial('_partial/footer') %>
     <!--wechat title img-->
-    <img class="wechat-title-img" src="<%- config['cdn-url']%><%= config['sidebar-avatar']%><%- config['cdn-url']?config['clip-avatar']:''%>">
+    <img class="wechat-title-img" src="<%- theme['cdn-url']%><%= theme['sidebar-avatar']%><%- theme['cdn-url']?theme['clip-avatar']:''%>">
 </body>
 
 </html>
