--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -8,11 +8,12 @@
 </style>
 <!-- hack iOS CSS :active style -->
 <body ontouchstart="">
-<%- partial('_partial/nav') %>
+    <%- partial('_partial/nav') %>
     <!-- Main Content -->
     <%- body %>
     <!-- Footer -->
     <%- partial('_partial/footer') %>
+    <%- partial('_partial/after_footer') %>
     <!--wechat title img-->
     <img class="wechat-title-img" src="<%- theme['cdn-url']%><%= theme['sidebar-avatar']%><%- theme['cdn-url']?theme['clip-avatar']:''%>">
 </body>
