--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -71,7 +71,8 @@ layout: layout
                     </div>
                 </section>
                 <% }%>
-
+                <hr>
+                <%- partial('_widget/friends') %>
             </div>
     </div>
 </div>
