--- a/layout/_partial/nav.ejs
+++ b/layout/_partial/nav.ejs
@@ -28,13 +28,13 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="<%= config.root %>">Home</a>
+                        <a href="<%= config.root %>"><%- __('home')%></a>
                     </li>
 
-                    <% site.pages.forEach(function(page){ %>
-                        <% if(page.title){ %>
+                    <% theme.nav.forEach(function(page){ %>
+                        <% if(page.name){ %>
                         <li>
-                            <a href="<%= config.root %><%= page.path.replace('index.html', '') %>"><%= page.title %></a>
+                            <a href="<%= config.root %><%= page.url %>"><%= page.name %></a>
                         </li>
                         <% } %>
                     <% }); %>
