--- a/layout/_widget/word_count.ejs
+++ b/layout/_widget/word_count.ejs
@@ -1,4 +1,4 @@
-<% if(theme['use_word_count'])  {%>
+<% if(theme['word_count'])  {%>
 <hr>
 <span class="post-count"><%- __('word_count')%>：<%= wordcount(page.content) %></span>
 <% } %>
