--- a/layout/_partial/nav.ejs
+++ b/layout/_partial/nav.ejs
@@ -28,17 +28,15 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="<%= config.root %>">Home</a>
+                        <a href="<%= config.root %>"><i class="fa fa-home"><%- __('home')%></i></a>
                     </li>
-
-                    <% site.pages.forEach(function(page){ %>
-                        <% if(page.title){ %>
+                    <% theme.nav.forEach(function(page){ %>
+                        <% if(page.name){ %>
                         <li>
-                            <a href="<%= config.root %><%= page.path.replace('index.html', '') %>"><%= page.title %></a>
+                            <a href="<%= config.root %><%= page.url %>"><i class="fa <%= page.icon %>"><%= page.name %></i></a>
                         </li>
                         <% } %>
                     <% }); %>
-
                 </ul>
             </div>
         </div>
