--- a/layout/_widget/friends.ejs
+++ b/layout/_widget/friends.ejs
@@ -1,7 +1,6 @@
 <% if(theme.friends) { %>
-<hr>
-<h5><%- __('friends') %></h5>
-<ul class="list-inline">
+<h5 class="links"><i class="fa fa-external-link"><%- __('friends') %></i></h5>
+<ul>
     <% theme.friends.forEach(function(friend){ %>
         <li><a href="<%= friend['url'] %>"><%= friend['title'] %></a></li>
     <% }); %>
