--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -22,9 +22,9 @@ layout: layout
                         <h2 class="subheading"><%= page.subtitle %></h2>
                     <% } %>
                     <span class="meta">
-                         <%- __('author')%> <%- page.author || config.author %>
+                         <%- __('author')%>：<%- page.author || config.author %>
                          <span>
-                          <%- __('date')%> <%= page.date.format(config.date_format) %>
+                          <%- __('date')%>：<%= page.date.format(config.date_format) %>
                          </span>
                     </span>
                     <div class="tags text-center">
@@ -60,16 +60,6 @@ layout: layout
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <!-- Sidebar Container -->
-            <%- partial('_partial/sidebar') %>
-        </div>
-
     </div>
 </article>
-
-<!-- 多说，disqus 公共JS代码 -->
-<%- partial('_partial/comment_js') %>
-
 <%- partial('_partial/anchorjs') %>
