Add to_top, smoothscroll, more beautiful buttons, improved excerpt, implemented archiving

--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -7,6 +7,13 @@
 <!-- Custom Theme JavaScript -->
 <%- js('js/blog.js') %>
 
+<!-- Smooth scroll on same page, using jQuery -->
+<%- js('js/smoothscroll') %>
+
+<!-- Totop -->
+<%- partial('_partial/totop')%>
+<%- js('js/totop') %>
+
 <!-- Site search JS -->
 <% if(theme['site_search']) { %>
 <%- js('js/search.js') %>
