--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -49,7 +49,11 @@ layout: layout
         <div class="row">
                 <!-- Post Container -->
             <div class="col-lg-8 col-lg-offset-1 col-sm-9 post-container">
-                <%- page.content %>
+                <% if(page.excerpt) {%>
+                    <%- page.more %>
+                <% } else { %>
+                    <%- page.content %>
+                <% } %>
                 <%- partial('_widget/word_count') %>
                 <hr>
                 <%- partial('_partial/comment') %>
