Improved archive page, removed "null" when keyword is not set, improved style of widgets

--- a/layout/_partial/sns.ejs
+++ b/layout/_partial/sns.ejs
@@ -23,12 +23,11 @@
         <a target="_blank" href="https://www.zhihu.com/people/<%= theme.zhihu_username %>">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa  fa-stack-1x fa-inverse">知</i>
+                <i class="fa fa-stack-1x fa-inverse">知</i>
             </span>
         </a>
     </li>
 <% } %>
-
 <% if (theme.weibo_username) { %>
     <li>
         <a target="_blank" href="http://weibo.com/<%= theme.weibo_username %>">
@@ -39,7 +38,6 @@
         </a>
     </li>
 <% } %>
-
 <% if (theme.facebook_username) { %>
     <li>
         <a target="_blank" href="https://www.facebook.com/<%= theme.facebook_username %>">
@@ -50,10 +48,9 @@
         </a>
     </li>
 <% } %>
-
 <% if (theme.github_username) { %>
     <li>
-        <a target="_blank"  href="https://github.com/<%= theme.github_username %>">
+        <a target="_blank" href="https://github.com/<%= theme.github_username %>">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -61,14 +58,22 @@
         </a>
     </li>
 <% } %>
-
-
 <% if (theme.linkedin_username) { %>
     <li>
-        <a target="_blank"  href="https://www.linkedin.com/in/<%= theme.linkedin_username %>">
+        <a target="_blank" href="https://www.linkedin.com/in/<%= theme.linkedin_username %>">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+    </li>
+<% } %>
+<% if (theme.steam_id) { %>
+    <li>
+        <a target="_blank" href="https://steamcommunity.com/id/<%= theme.steam_id %>">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-steam fa-stack-1x fa-inverse"></i>
             </span>
         </a>
     </li>
