--- a/layout/_partial/pagination.ejs
+++ b/layout/_partial/pagination.ejs
@@ -1,12 +1,12 @@
 <ul class="pager">
     <% if (page.prev){ %>
         <li class="previous">
-            <a href="<%- config.root %><%- page.prev_link %>" data-toggle="tooltip" data-placement="top" title="<%- page.prev.title %>">&larr;  <%- __('prev')%></a>
+            <a href="<%- config.root %><%- page.prev_link %>" data-toggle="tooltip" data-placement="top" title="<%- page.prev.title %>"><i class="fa fa-chevron-left"></i> <%- __('prev')%></a>
         </li>
     <% } %>
     <% if (page.next){ %>
         <li class="next">
-            <a href="<%- config.root %><%- page.next_link %>" data-toggle="tooltip" data-placement="top" title="<%- page.next.title %>"><%- __('next')%>  &rarr;</a>
+            <a href="<%- config.root %><%- page.next_link %>" data-toggle="tooltip" data-placement="top" title="<%- page.next.title %>"><%- __('next')%>  <i class="fa fa-chevron-right"></i></a>
         </li>
     <% } %>
 </ul>
