--- a/layout/_partial/post_nav.ejs
+++ b/layout/_partial/post_nav.ejs
@@ -1,12 +1,12 @@
 <ul class="pager">
     <% if (page.prev){ %>
         <li class="previous">
-            <a href="<%- config.root %><%- page.prev.path %>" data-toggle="tooltip" data-placement="top" title="<%- page.prev.title %>">&larr; <%- __('prev_post')%></a>
+            <a href="<%- config.root %><%- page.prev.path %>" data-toggle="tooltip" data-placement="top" title="<%- page.prev.title %>"><i class="fa fa-chevron-left"></i> <%- __('prev_post')%></a>
         </li>
     <% } %>
     <% if (page.next){ %>
         <li class="next">
-            <a href="<%- config.root %><%- page.next.path %>" data-toggle="tooltip" data-placement="top" title="<%- page.next.title %>"><%- __('next_post')%> &rarr;</a>
+            <a href="<%- config.root %><%- page.next.path %>" data-toggle="tooltip" data-placement="top" title="<%- page.next.title %>"><%- __('next_post')%> <i class="fa fa-chevron-right"></i></a>
         </li>
     <% } %>
 </ul>
