--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -1,48 +1,5 @@
 ---
 layout: layout
 ---
-<%
-    var year, month;
-    var last_year = 1970;
-    var is_first_year = 1;
-%>                  
-<div class="container custom-haojen-container">
-    <div class="row">
-        <!-- Post Container -->
-        <div class="col-lg-8 col-lg-offset-1 col-sm-9 post-container">
-        <!--here-->
-            <div class="archive">
-            <% site.posts.sort('date', -1).each(function(item){ %>
-                <%
-                    year = item.date.toDate().getFullYear();
-                    month = item.date.toDate().getMonth();  
-                %>
-                <% if (year != last_year){ %>
-                    <% if (!is_first_year) { %>
-                    </ul>
-                    <% } %>
-                    <% is_first_year = 0 %>
-                        <h4 class="archive-ul" data-toggle="collapse" data-target="#<%= year %>"><%= year %><b class="caret"></b></h4>
-                        <ul id="<%= year %>" class="collapse in">
-                    <% last_year = year; %>
-                <% } %>
-                <li class="listing-item">
-                <span class="date_class"> <%= item.date.format("YYYY-MM-DD") %> </span> &raquo;
-                <% if (item.link){ %>
-                    <% if (item.title){ %>
-                    <span class="title link"><a href="<%- item.link %>" target="_blank" <% if (item.description) { %> title="<%= item.description %>" <% } %>><%= item.title %></a></span>
-                    <% } else { %>
-                    <span class="title link"><a href="<%- item.link %>" target="_blank" <% if (item.description) { %> title="<%= item.description %>" <% } %>><%= item.link %></a></span>
-                    <% } %>
-                <% } else { %>
-                <span class="title"><a href="<%- config.root %><%- item.path %>" <% if (item.description) { %> title="<%= item.description %>" <% } %>><%= item.title %></a></span>
-                <% } %>
-                </li>
-            <% }); %>
-            </ul>
-            </div>
-            <%- partial('_partial/comment') %>
-        </div>
-    </div>
-</div>
+<%- partial('_partial/archiving',{kind: "archive", comment: false})%>
 <%- partial('_partial/pagination')%>
