--- a/layout/tags.ejs
+++ b/layout/tags.ejs
@@ -43,7 +43,7 @@ layout: layout
                  <div class="post-preview">
                      <a href="<%- config.root %><%- post.path %>">
                         <h2 class="post-title">
-                            <%- post.title || "Untitled" %>
+                            <%- post.title || __('untitled') %>
                         </h2>
                         <% if (post.subtitle && post.subtitle.length) { %>
                             <h3 class="post-subtitle">
