--- a/layout/_widget/friends.ejs
+++ b/layout/_widget/friends.ejs
@@ -1,8 +1,10 @@
 <% if(theme.friends) { %>
-<h5 class="links"><i class="fa fa-external-link"></i> <%- __('friends') %></h5>
-<ul>
-    <% theme.friends.forEach(function(friend){ %>
-        <li><a href="<%= friend['url'] %>"><%= friend['title'] %></a></li>
-    <% }); %>
-</ul>
+<div class="widget friends">
+    <h5 class="links"><i class="fa fa-external-link"></i> <%- __('friends') %></h5>
+    <ul>
+        <% theme.friends.forEach(function(friend){ %>
+            <li><a href="<%= friend['url'] %>"><%= friend['title'] %></a></li>
+        <% }); %>
+    </ul>
+</div>
 <% }%>
