--- a/layout/_widget/categories.ejs
+++ b/layout/_widget/categories.ejs
@@ -2,11 +2,11 @@
     <div class="widget categories">
     <% if (site.categories.length){ %>
         <h5 ><i class="fa fa-folder-o"></i> <%= __('categories') %></h5>
-        <ul class="list-inline">
+        <div class="tags">
         <% site.categories.sort('name').each(function(item){ %>
-            <li><a href="<%- config.root %><%- item.path %>"><%= item.name %></a></li>
+            <a href="<%- config.root %><%- item.path %>"><%= item.name %></a>
         <% }); %>
-        </ul>
+        </div>
     <% } %>
     </div>
 <% } %>
