Improved totop button, reduced css size

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -24,8 +24,8 @@
     <%- css('css/blog-style.css') %>
     <!-- Pygments Github CSS -->
     <%- css('css/syntax') %>
-    <!-- Beautiful buttons -->
-    <%- css('css/buttons') %>
+    <!-- The totop button -->
+    <%- css('css/totop') %>
     
     <!-- Custom Fonts -->
     <link href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
