--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -15,7 +15,7 @@
 <%- js('js/totop') %>
 
 <!-- Site search JS -->
-<% if(theme['site_search']) { %>
+<% if(is_page() && theme['site_search']) { %>
 <%- js('js/search.js') %>
 <script type="text/javascript">
     var search_path = "<%= config.search.path %>";
