--- a/layout/_partial/totop.ejs
+++ b/layout/_partial/totop.ejs
@@ -1,3 +1,3 @@
-<div id="totop" style="position:fixed;bottom:150px;right:50px;cursor: pointer;">
-    <button class="button button-square button-small"><i class="fa fa-chevron-up"></i></button>
+<div id="totop" class>
+    <button class="button button-square button-small" title=<%- __('to_top')%>><i class="fa fa-chevron-up"></i></button>
 </div>
