Improved blockquote style

--- a/source/css/blog-style.css
+++ b/source/css/blog-style.css
@@ -135,8 +135,9 @@ a img:focus {
 
 blockquote {
     color: #808080;
-    font-style: italic;
-    font-size: 0.95em;
+    font-style: normal;
+    font-size: 1.1em;
+    font-family: "Lora","Garamond","Freight Text","Times New Roman";
     margin: 20px 0 20px;
 }
 
