Move bootstrap.js and blog.js back

--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -1,3 +1,7 @@
+<!-- Bootstrap Core JavaScript -->
+<%- js('js/bootstrap.min.js') %>
+<!-- Custom Theme JavaScript -->
+<%- js('js/blog.js') %>
 <!-- Smooth scroll on same page, using jQuery -->
 <%- js('js/smoothscroll') %>
 
