Set page title to config.author if config.title is empty

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -7,7 +7,7 @@
                     <%- partial('_partial/sns') %>
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; <%= config.title %> <%= new Date().getFullYear() %> 
+                    Copyright &copy; <%= config.title || (config.author + "\'s Blog") %> <%= new Date().getFullYear() %> 
                     <br>
                     <!--Theme by <a href="https://github.com/Kaijun/">Kaijun</a>-->
                     <!--<span style="display: inline-block; margin: 0 5px;">-->
