--- a/layout/_partial/archiving.ejs
+++ b/layout/_partial/archiving.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 ">
                 <div class="site-heading text-center">
-                    <h1><%= page.title || config.title %></h1>
+                    <h1><%= page.title || (config.title || (config.author + "\'s Blog")) %></h1>
                     <span class="subheading"><%= page.description || config.subtitle || "" %></span>
                 </div>
             </div>
