--- a/layout/_partial/comment.ejs
+++ b/layout/_partial/comment.ejs
@@ -6,11 +6,11 @@
     data-title="<%= page.title %>"
     data-url="<%= page.permalink %>"
     data-images="<%= page["header-img"] ? page.permalink + page["header-img"] : '' %>"
-    data-content="<%- truncate(strip_html(page.content), {length: 50, omission: '...'}) %> | <%= theme.SEOTitle %> " >
+    data-content="<%- truncate(strip_html(page.content), {length: 50, omission: '...'}) %> | <%= config.title || (config.author + "\'s Blog") %>" >
     <div class="ds-share-inline">
       <ul  class="ds-share-icons-16">
         <li data-toggle="ds-share-icons-more"><a class="ds-more" href="#"><%- __('share_to')%>：</a></li>
-        <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat"><%- __('weixin')%></a></li>
+        <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat"><%- __('wechat')%></a></li>
         <li><a class="ds-weibo flat" href="javascript:void(0);" data-service="weibo"><%- __('weibo')%></a></li>
         <li><a class="ds-douban flat" href="javascript:void(0);" data-service="douban"><%- __('douban')%></a></li>
       </ul>
