--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -8,11 +8,11 @@
 
     <title>
         <% if(page.archive) { %>
-          <%= page.year || page.month || __('archive') %> ｜ <%= config.title %>
+          <%= page.year || page.month || __('archive') %> ｜ <%= config.title || (config.author + "\'s Blog") %>
         <% } else if (page.title || page.category || page.tag) { %>
-          <%= page.title || page.category || page.tag %> ｜ <%= config.title %>
+          <%= page.title || page.category || page.tag %> ｜ <%= config.title || (config.author + "\'s Blog") %>
         <% } else {%>
-          <%= config.title %>
+          <%= config.title || (config.author + "\'s Blog") %>
         <% } %>
     </title>
 
