--- a/layout/_widget/site_search.ejs
+++ b/layout/_widget/site_search.ejs
@@ -1,4 +1,4 @@
-<% if(theme['site_search']) { %>
+<% if(is_home() && theme['site_search']) { %>
   <div class="widget" id="site_search">
    <div class="form-group">
     <input type="text" id="local-search-input" name="q" results="0" placeholder="<%= __('search') %>" class="st-search-input st-default-search-input form-control"/>
