Remove toc when not required in posts

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -60,7 +60,9 @@ layout: layout
             </div>
             <div class="hidden-xs col-sm-3 toc-col" >
                 <div class="toc-wrap">
+                    <% if(page.toc) { %>
                     <%- toc(page.content , {list_number : false}) %>
+                    <% } %>
                 </div>
             </div>
         </div>
