Add background image back and fixed alignment bug

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="<%- config.lang %>">
+<html lang="<%= config.lang %>">
 
 <!-- Head tag -->
 <%- partial('_partial/head') %>
