--- a/source/css/blog-style.css
+++ b/source/css/blog-style.css
@@ -490,32 +490,34 @@ article blockquote footer{
     }
 }
 
-.post-preview > a {
-    color: #404040;
+.post-preview > .align-center {
     display: block;
     height: 100%;
 }
-.post-preview > a:hover,
-.post-preview > a:focus {
+.post-preview > .align-center > a {
+    color: #404040;
+}
+.post-preview > .align-center > a:hover,
+.post-preview > .align-center > a:focus {
     text-decoration: none;
     outline: none;
 }
 a:focus {
     outline: none;
 }
-.post-preview > a > h2{    transition: color .3s;  }
-.post-preview:not(:first-of-type) > a:hover > h2{
+.post-preview > .align-center > a > h2{    transition: color .3s;  }
+.post-preview:not(:first-of-type) > .align-center > a:hover > h2{
     color: #FC7097;
 }
 
-.post-preview > a > .post-title {
+.post-preview > .post-title {
     font-size: 21px;
     line-height: 1.3;
     margin-top: 30px;
-     margin-bottom:0;
+    margin-bottom:0;
 }
 
-.post-preview > a > .post-subtitle {
+.post-preview > .post-subtitle {
     font-size: 18px;
     line-height: 1.3;
     margin: 0;
@@ -531,19 +533,19 @@ a:focus {
     margin-bottom: 15px;
 }
 
-.post-preview > .post-meta > a {
+.post-preview > .align-center > .post-meta > a {
     text-decoration: none;
     color: #404040;
 }
 
-.post-preview > .post-meta > a:hover,
-.post-preview > .post-meta > a:focus {
+.post-preview > .align-center > .post-meta > a:hover,
+.post-preview > .align-center > .post-meta > a:focus {
     color: #0085a1;
     text-decoration: underline;
 }
 
 @media only screen and (min-width: 768px) {
-    .post-preview > a > .post-title {
+    .post-preview > .align-center > .post-title {
         font-size: 26px;
         line-height: 1.3;
     }
