--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -2,9 +2,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="<%= config.description %>">
+    <% if(config.description) { %><meta name="description" content="<%= config.description %>"><% } %>
     <% if(theme.keyword){ %><meta name="keyword" content="<%= theme.keyword %>"><% } %>
-    <link rel="shortcut icon" href="<%= config.root %>img/coffee.png">
 
     <title>
         <% if(page.archive) { %>
