--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -15,7 +15,7 @@
     <%- partial('_partial/footer') %>
     <%- partial('_partial/after_footer') %>
     <!--wechat title img-->
-    <img class="wechat-title-img" src="<%- theme['cdn-url']%><%= theme['sidebar-avatar']%><%- theme['cdn-url']?theme['clip-avatar']:''%>">
+    <img class="title-img" src="<%- theme['cdn-url']%><%= theme['sidebar-avatar']%><%- theme['cdn-url']?theme['clip-avatar']:''%>">
 </body>
 
 </html>
