--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -4,7 +4,7 @@ layout: layout
 
 <!-- Image to hack wechat -->
 <!--only post-->
-<img class="wechat-title-img" src="<%- theme['cdn-url']%><%= page['wechat-share'] || page['header-img'] || theme["post-default-img"]%><%- theme['cdn-url']? theme['clip-content']:''%>">
+<img class="title-img" src="<%- theme['cdn-url']%><%= page['wechat-share'] || page['header-img'] || theme["post-default-img"]%><%- theme['cdn-url']? theme['clip-content']:''%>">
 
 <!-- Post Header -->
 <!-- only post bg-->
