--- a/layout/poetry.ejs
+++ b/layout/poetry.ejs
@@ -1,9 +1,7 @@
 ---
 layout: layout
 ---
-<style>
-    <%- include _css/poetry.css %>
-</style>
+<%- css('css/specialize/poetry') %>
 <div class="poetry-container">
     <!--导航黑色-->
         <div class="poetry-head"></div>
