--- a/layout/tags.ejs
+++ b/layout/tags.ejs
@@ -6,7 +6,9 @@ layout: layout
 <%- partial('_partial/pagination') %>
 <% } else { %>
 <style>
-    <%- include _css/tags.css %>
+.intro-header .site-heading{
+    margin:50px;
+}
 </style>
 
 <!-- Page Header -->
