--- a/layout/works.ejs
+++ b/layout/works.ejs
@@ -1,9 +1,7 @@
 ---
 layout: layout
 ---
-<style>
-<%- include _css/works.css %>
-</style>
+<%- css('css/specialize/works') %>
 
 <!--样式内容-->
 <div class="works-container" style="background-color: #fafafa">
