--- a/source/css/_parts/sidebar.styl
+++ b/source/css/_parts/sidebar.styl
@@ -2,9 +2,7 @@
     color: #bfbfbf;
     font-size: 14px;
     margin-top: 35px;
-    @media (min-width: 1200px) {
-        padding-right: 5%;
-    }
+    @media (min-width: 1200px) {padding-right: 5%;}
     h5 {
         color: #808080;
         a {
@@ -16,11 +14,9 @@
         color: #bfbfbf !important;
         &:hover, &:active {color: #0085a1 !important;}
     }
-    .tags {
-        a {
-            border-color: #bfbfbf;
-            &:hover, &:active {border-color: #0085a1;}
-        }
+    .tags a {
+        border-color: #bfbfbf;
+        &:hover, &:active {border-color: #0085a1;}
     }
     .short-about {
         text-align: center;
