--- a/layout/keynote.ejs
+++ b/layout/keynote.ejs
@@ -8,7 +8,16 @@ layout: layout
 
 <!-- Post Header -->
 <style type="text/css">
-    <%- include _css/keynote.css %>
+header.intro-header{
+    /*background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')*/
+    height: 500px;
+    overflow: hidden;
+}
+header iframe{
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
 </style>
 <header class="intro-header" >
     <iframe src="<%= page.iframe %>"/>
