--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -2,9 +2,7 @@
 layout: layout
 ---
 <% if(is_home()){%>
-<style>
-    <%- include _css/page.css %>
-</style>
+    <%- css('css/specialize/preview') %>
 <%}%>
 <!-- Page Header -->
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 visible-xs-block visible-sm-block">
