--- a/source/css/_parts/html-tag.styl
+++ b/source/css/_parts/html-tag.styl
@@ -19,11 +19,11 @@ h1,h2,h3,h4,h5,h6 {
     text-transform: capitalize;
 }
 
-h2{font-size: 22px;}
-h3{font-size: 20px;}
-h4{font-size: 18px;}
-h5{font-size: 16px;}
-h6{font-size: 15px;}
+h2 {font-size: 22px;}
+h3 {font-size: 20px;}
+h4 {font-size: 18px;}
+h5 {font-size: 16px;}
+h6 {font-size: 15px;}
 
 a {
     color: #404040;
@@ -82,8 +82,7 @@ hr.small {
     border:4px white;
 }
 
-pre,
-.table-responsive {
+pre, .table-responsive {
     -webkit-overflow-scrolling: touch;
 }
 
@@ -114,4 +113,9 @@ footer {
             &:hover, &:focus {color: #0085a1;}
         }
     }
+}
+
+.custom-haojen-container{
+    padding-top: 0;
+    @media (min-width: 992px) {padding-top: 90px;}
 }
