--- a/source/css/_parts/unknown.styl
+++ b/source/css/_parts/unknown.styl
@@ -1,5 +1,6 @@
 /* I don't know what's the purpose of setting them, 
  * and they are nowhere in my html.
+ * This file is currently not included in main css.
  */
 
 @media (min-width: 1200px) {
@@ -70,49 +71,4 @@
 
 .t:first-child {
     margin-top: 0;
-}
-
-.page-fullscreen {
-    .intro-header {
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-    }
-    #tag-heading {
-        position: fixed;
-        left: 0;
-        top: 0;
-        padding-bottom: 150px;
-        width: 100%;
-        height: 100%;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-box-pack: center;
-        -webkit-box-align: center;
-        display: -webkit-flex;
-        -webkit-align-items: center;
-        -webkit-justify-content: center;
-        -webkit-flex-direction: column;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-    footer {
-        position: absolute;
-        width: 100%;
-        bottom: 0;
-        padding-bottom: 20px;
-        opacity: 0.6;
-        color: #fff;
-        .copyright {
-            color: #fff;
-            a {
-                color: #fff;
-                &:hover {color: #ddd;}
-            }
-        }
-    }
 }
