--- a/source/css/main.styl
+++ b/source/css/main.styl
@@ -9,14 +9,10 @@ $MonospaceFontFamily = Consolas, Menlo, monospace
 @import '_parts/header'
 @import '_parts/sidebar'
 @import '_parts/post'
+@import '_parts/page'
 @import '_parts/tags'
-@import '_parts/pager'
-@import '_parts/container'
 @import '_parts/comment'
 @import '_parts/highlight'
 
 @import '_parts/button'
-@import '_parts/unknown'
-
-@import '_parts/widgets/searchbox.css'
-@import '_parts/widgets/totop.css'
+@import '_parts/widgets'
