Re-rearrange css

--- a/source/css/main.styl
+++ b/source/css/main.styl
@@ -4,15 +4,13 @@ $SerifFontFamily = "Lora","FF Tisa","Freight Text","Times New Roman"
 
 $MonospaceFontFamily = Consolas, Menlo, monospace
 
-@import '_parts/html-tag'
+@import '_parts/base'
 @import '_parts/navbar'
-@import '_parts/header'
 @import '_parts/sidebar'
 @import '_parts/post'
 @import '_parts/page'
 @import '_parts/tags'
 @import '_parts/comment'
-@import '_parts/highlight'
 
 @import '_parts/button'
 @import '_parts/widgets'
